# dimensionals

./: Cargo.toml  README.md  TODO.md  goals.md
benches/: benchmarks.rs
src/: core.rs  display.rs  iterators.rs  lib.rs  linear_storage.rs  operators.rs  storage.rs
