[package]
authors = ["0xAlcibiades <alcibiades.eth@protonmail.com>"]
categories = ["mathematics"]
description = "Rust native generic, flexible n-dimensional array."
homepage = "https://github.com/warlock-labs/dimensionals"
keywords = ["math", "matrix", "vector", "tensor", "array"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/warlock-labs/dimensionals"
name = "dimensionals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.3"

[lib]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false